Cache bust v202511120050 - Mobile optimization

--- a/website/index.html
+++ b/website/index.html
@@ -57,6 +57,12 @@
                     <a href="#events" class="nav-link">Events</a>
                     <a href="#contact" class="nav-link">Contact</a>
                     <a href="#" class="btn-join">Join Now</a>
+                    <a href="https://www.google.com/search?sca_esv=77dc914585b7f4b2&rlz=1C1VDKB_enIN1171IN1171&authuser=1&sxsrf=AE3TifNPL4y8Rm-anE0EXODCGg4uHk3gkQ:1762887211724&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E3iNJFC00acShHBcPUqCLRV3Fhc8sSUlq9RgfNGUyK2UFLk_sRfz3ZpQjqKi6Bg87PXtKCUvrnZqczEupyUe1mAQr6IJrtkIecksx1cX2Xiyo4ROnp2azMcgzjBjcB3ygsBOexM%3D&q=ANURANAN+Recitation+Training+Institution+Reviews&sa=X&ved=2ahUKEwjMvqLQ4uqQAxX_U2wGHbjeLNwQ0bkNegQIJRAE&biw=1396&bih=663&dpr=1.38#lrd=0x3a027a5da352c909:0x34b9863bb19d2e6a,3,,,," 
+                       class="nav-link mobile-review-link" 
+                       target="_blank" 
+                       rel="noopener">
+                        <i class="fab fa-google"></i> Review Us on Google
+                    </a>
                 </div>
                 <div class="hamburger" id="hamburger">
                     <span></span>
@@ -707,6 +713,22 @@
                             <a href="https://whatsapp.com/channel/0029VbBdwh4LtOjG68w57D37" class="social-icon" target="_blank" rel="noopener"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
+
+                    <div class="info-card google-review-card">
+                        <div class="info-icon">
+                            <i class="fab fa-google"></i>
+                        </div>
+                        <div class="info-text">
+                            <h3>Rate Us on Google</h3>
+                            <p>Share your experience and help us grow!</p>
+                            <a href="https://www.google.com/search?sca_esv=77dc914585b7f4b2&rlz=1C1VDKB_enIN1171IN1171&authuser=1&sxsrf=AE3TifNPL4y8Rm-anE0EXODCGg4uHk3gkQ:1762887211724&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E3iNJFC00acShHBcPUqCLRV3Fhc8sSUlq9RgfNGUyK2UFLk_sRfz3ZpQjqKi6Bg87PXtKCUvrnZqczEupyUe1mAQr6IJrtkIecksx1cX2Xiyo4ROnp2azMcgzjBjcB3ygsBOexM%3D&q=ANURANAN+Recitation+Training+Institution+Reviews&sa=X&ved=2ahUKEwjMvqLQ4uqQAxX_U2wGHbjeLNwQ0bkNegQIJRAE&biw=1396&bih=663&dpr=1.38#lrd=0x3a027a5da352c909:0x34b9863bb19d2e6a,3,,,," 
+                               class="btn-google-review" 
+                               target="_blank" 
+                               rel="noopener">
+                                <i class="fas fa-star"></i> Write a Review
+                            </a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="contact-form-wrapper fade-in">
@@ -835,6 +857,17 @@
     <button id="scrollTop" class="scroll-top">
         <i class="fas fa-arrow-up"></i>
     </button>
+
+    <!-- Floating Google Review Button -->
+    <a href="https://www.google.com/search?sca_esv=77dc914585b7f4b2&rlz=1C1VDKB_enIN1171IN1171&authuser=1&sxsrf=AE3TifNPL4y8Rm-anE0EXODCGg4uHk3gkQ:1762887211724&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E3iNJFC00acShHBcPUqCLRV3Fhc8sSUlq9RgfNGUyK2UFLk_sRfz3ZpQjqKi6Bg87PXtKCUvrnZqczEupyUe1mAQr6IJrtkIecksx1cX2Xiyo4ROnp2azMcgzjBjcB3ygsBOexM%3D&q=ANURANAN+Recitation+Training+Institution+Reviews&sa=X&ved=2ahUKEwjMvqLQ4uqQAxX_U2wGHbjeLNwQ0bkNegQIJRAE&biw=1396&bih=663&dpr=1.38#lrd=0x3a027a5da352c909:0x34b9863bb19d2e6a,3,,,," 
+       id="googleReviewBtn" 
+       class="google-review-float" 
+       target="_blank" 
+       rel="noopener"
+       title="Leave us a Google Review">
+        <i class="fab fa-google"></i>
+        <span class="review-text">Review Us</span>
+    </a>
 
     <!-- Contact Form Modal -->
     <div id="contactModal" class="contact-modal">
