Cache bust v202511131127 - Mobile optimization

--- a/website/index.html
+++ b/website/index.html
@@ -6,11 +6,27 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#1B4B8F">
     <meta name="screen-orientation" content="any">
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="public/icon-192.png">
+    <!-- Favicon Links -->
+    <link rel="apple-touch-icon" sizes="57x57" href="public/favicon_new/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="public/favicon_new/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="public/favicon_new/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="public/favicon_new/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="public/favicon_new/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="public/favicon_new/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="public/favicon_new/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="public/favicon_new/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/favicon_new/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="public/favicon_new/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon_new/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="public/favicon_new/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon_new/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="public/favicon_new/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="public/favicon_new/ms-icon-144x144.png">
+    <meta name="theme-color" content="#1B4B8F">
     <!-- Cache Control Meta Tags -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
@@ -31,8 +47,8 @@
     <nav class="navbar" id="navbar">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="index.html" class="logo" style="text-decoration: none; color: inherit;">
-                    <div class="logo-icon">অ</div>
+                <a href="index.html" class="logo" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 10px;">
+                    <img src="public/logo.png" alt="Anuranan Logo" style="height: 70px; width: auto;">
                     <div class="logo-text">
                         <h1>অনুরণন</h1>
                     </div>
