Added logo & favicon

--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="screen-orientation" content="any">
     <!-- PWA Manifest -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json?v=202511130001">
     <!-- Favicon Links -->
     <link rel="apple-touch-icon" sizes="57x57" href="public/favicon_new/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="public/favicon_new/apple-icon-60x60.png">
@@ -32,7 +32,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>Anuranan Recitation Training Institute | Bengali Cultural Learning Hub</title>
-    <link rel="stylesheet" href="styles.css?v=202511110001">
+    <link rel="stylesheet" href="styles.css?v=202511130001">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Hind+Siliguri:wght@300;400;500;600;700&family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -925,14 +925,14 @@
         </div>
     </div>
 
-    <script src="script.js?v=202511102038"></script>
-    <script src="supabase-loader.js?v=202511102038"></script>
+    <script src="script.js?v=202511130001"></script>
+    <script src="supabase-loader.js?v=202511130001"></script>
     
     <!-- Service Worker Registration -->
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js')
+                navigator.serviceWorker.register('/service-worker.js?v=202511130001')
                     .then((registration) => {
                         console.log('Service Worker registered successfully:', registration.scope);
                     })
