--- a/website/index.html
+++ b/website/index.html
@@ -47,7 +47,7 @@
     <nav class="navbar" id="navbar">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="index.html" class="logo" style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 10px;">
+                <a href="index.html" class="logo" style="text-decoration: none; color: inherit;">
                     <img src="public/logo.png" alt="Anuranan Logo" style="height: 70px; width: auto;">
                     <div class="logo-text">
                         <h1>অনুরণন</h1>
