--- a/website/videos.html
+++ b/website/videos.html
@@ -31,8 +31,8 @@
     <nav class="navbar" id="navbar">
         <div class="container">
             <div class="nav-wrapper">
-                <a href="index.html" class="logo" style="text-decoration: none; color: inherit;">
-                    <div class="logo-icon">অ</div>
+                <a href="index.html" class="logo" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
+                    <img src="public/logo.png" alt="Anuranan Logo" class="logo-img" style="height: 72px; margin-right: 1px;">
                     <div class="logo-text">
                         <h1>অনুরণন</h1>
                     </div>
