Cache bust v202511131246 - Mobile optimization

--- a/website/videos.html
+++ b/website/videos.html
@@ -11,6 +11,11 @@
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="public/icon-192.png">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon_new/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon_new/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="public/favicon_new/favicon-96x96.png">
+    <link rel="shortcut icon" href="public/favicon_new/favicon.ico">
     <!-- Cache Control Meta Tags -->
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
