--- a/admin/index.html
+++ b/admin/index.html
@@ -47,7 +47,7 @@
             </button>
             
             <div class="admin-actions">
-                <a href="https://anuranan-j1j8.onrender.com/" class="btn-view-site" target="_blank">
+                <a href="https://anuranan-institute.in/" class="btn-view-site" target="_blank">
                     <i class="fas fa-external-link-alt"></i> <span class="btn-text">View Site</span>
                 </a>
                 <a href="https://anuranan-emp-portal.netlify.app/login" class="btn-view-site" target="_blank">
