--- a/admin/index.html
+++ b/admin/index.html
@@ -50,7 +50,7 @@
                 <a href="https://anuranan-institute.in/" class="btn-view-site" target="_blank">
                     <i class="fas fa-external-link-alt"></i> <span class="btn-text">View Site</span>
                 </a>
-                <a href="https://anuranan-emp-portal.netlify.app/login" class="btn-view-site" target="_blank">
+                <a href="https://anuranan-emp-portal.netlify.app/dashboard" class="btn-view-site" target="_blank">
                     <i class="fas fa-external-link-alt"></i> <span class="btn-text">Employee Portal</span>
                 </a>
                 <a href="https://1drv.ms/x/c/492f14fdf41357c8/EchXE_T9FC8ggEmFAAAAAAABbARX1g_XElZohwKtCfQBQw" class="btn-view-site" target="_blank">
